# saturn

./: .gitattributes  .gitignore  .sweep_findings.json  CHANGELOG.md  FEATURE_INVENTORY.md  LICENSE  MANIFEST.in  NOTES.md  README.md  RESTRUCTURE.md  SATURDAY_MVP_PLAN.md  agent.py  benchmark.py  commands.py  compaction.py  config.default.yaml  config.py  config.yaml  diag.py  document_registry.py  egress.py  env_keys.py  eval_cases.py  glassbox.py  grading.py  install.ps1  install.sh  interrupts.py  llms.py  mcp_client.py  memory_registry.py  mentions.py  messages.py  notes.txt  permissions.py  plan_ops.py  policy.py  progress.txt  pyproject.toml  quarantine.py  (+18 more)
.github/workflows/: release.yml  tests.yml
app/: __init__.py  cli.py  graph.py  headless.py  repl.py  session.py  startup.py  turn.py
backend/: MEMORIES.md  agent.py  agent_v0.py  benchmark.py  debug.py  document_registry.py  llms.py  messages.py  rag.py  registry.py  state.py  tool.py  tools.py
backend/logging/benchmarks/: benchmark_20260601_121111.json
backend/logging/graphs/: agent_graph.mmd
backend/node_registry/: context_builder.py  llm_call.py  plan.py  reflect.py  router.py  synthesize.py  verifier.py
backend/registry/: deep_research.py  web_search.py
backend/tool_registry/: calculator.py  deep_research.py  list_directory.py  read_file.py  web_search.py  write_file.py
backend/utilities/: log_state.py
backend/workflows/: complex.py  light.py  moderate.py
backend/workflows_v0/: complex.py  light.py  moderate.py
commands/: __init__.py  _framework.py  _session.py  _utils.py  allow.py  animation.py  autoapprove.py  calls.py  clear.py  compact.py  config.py  context.py  conversation.py  cost.py  docs.py  dryrun.py  forget.py  glass.py  help.py  history.py  ingest.py  init.py  knowledge.py  load.py  mcp.py  memory.py  models.py  plan.py  policy.py  privacy.py  quit.py  reingest.py  reset.py  resume.py  retry.py  rewind.py  risk.py  runtime.py  save.py  source.py  (+9 more)
core/: __init__.py  budget.py  chat_template.py  compaction.py  confidence.py  continuation.py  interrupts.py  llms.py  mentions.py  messages.py  plan_context.py  plan_ops.py  provenance.py  state.py  structured.py  tool_args.py
database/: db.sqlite  db.sqlite-shm  db.sqlite-wal
database/cache/: index.json  summaries.json  vectors.json
database/documents/: .manifest.md  README.md  dashboard_event_schema.json  rag_eval_questions.jsonl  router_config_v0_1_deprecated.txt  sat_ai_synthetic_handbook.txt  tool_sandbox_policy.txt  welcome-to-saturn.md
database/documents/workspace/: .manifest.md  notes.md  test_output.txt
database/sessions/: _autosave.json
database/workspace/: .manifest.md  btc_price.txt  circle_area.txt  comparison_report.md  langgraph_news.md  names.txt  notes.md  report.txt  stock_comparison.txt  student.txt  test_output.txt  umd_student.txt
docs/: ARCHITECTURE.md  FEATURE_INVENTORY.md
frontend/: electron.vite.config.ts  package-lock.json  package.json
frontend/src/renderer/src/: App.tsx
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: ActiveAgent.tsx  Configurator.tsx  Explorer.tsx  FlightDeck.tsx  Log.tsx  Logs.tsx  RecentAgents.tsx  Sidebar.tsx  StatusBar.tsx  SystemMonitor.tsx  SystemResource.tsx  Terminal.tsx  Workspace.tsx
logging/benchmarks/: benchmark_20260601_025053.json  benchmark_20260601_120321.json  benchmark_20260602_192738.json  benchmark_20260603_002647.json  benchmark_20260603_004656.json  benchmark_20260603_234727.json  benchmark_20260604_011128.json  benchmark_20260604_012528.json  benchmark_20260604_112824.json  benchmark_20260604_125451.json
logging/graphs/: agent_graph.mmd
node_registry/: agent.py  approval.py  context_builder.py  ground.py  plan.py  plan_gate.py  reflect.py  repair.py  replan.py  synthesize.py  tools.py  update_plan.py  verifier.py
nodes/: __init__.py  agent.py  answer_gate.py  approval.py  execute.py  ground.py  plan.py  plan_gate.py  rectify.py  replan.py  synthesize.py  tools.py  update_plan.py
saturn_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stores/: __init__.py  document_registry.py  memory_registry.py  rag.py  recipes.py  snapshots.py  trace.py
tests/: conftest.py  test_ambient_trust.py  test_ask_user.py  test_budget.py  test_calculator.py  test_citations.py  test_cli.py  test_command_grammar.py  test_compact_history.py  test_confidence.py  test_config_persist.py  test_config_trust_keys.py  test_consolidations.py  test_core.py  test_digest.py  test_dry_run.py  test_egress.py  test_egress_log.py  test_engine.py  test_gate_events.py  test_gate_ux.py  test_glassbox.py  test_help.py  test_manifest_keys.py  test_mcp_redaction.py  test_memory_registry.py  test_mentions.py  test_ollama_locality.py  test_onboarding.py  test_orphaned_calls.py  test_permissions.py  test_plan_accounting.py  test_plan_context_commands.py  test_plan_draft.py  test_plan_vetoes.py  test_policy.py  test_policy_commands.py  test_policy_profiles.py  test_quarantine.py  test_quarantine_admission.py  (+24 more)
tool_registry/: _tavily.py  calculator.py  clock.py  deep_research.py  files.py  knowledge.py  list_directory.py  memory.py  read_file.py  recall.py  remember.py  run_python.py  search_knowledge_base.py  shell.py  web.py  web_extract.py  web_search.py  write_file.py
tools/: __init__.py  calculator.py  clock.py  files.py  interaction.py  knowledge.py  mcp_client.py  memory.py  registry.py  shell.py  toolspec.py  web.py
trust/: __init__.py  digest.py  egress.py  glassbox.py  policy.py  quarantine.py  receipt.py  redaction.py  signing.py  trust_report.py
tui/: __init__.py  system_monitor.py  typeahead.py  ui.py
tui/ui/: __init__.py  _base.py  approval.py  art.py  correction.py  glass.py  listing.py  plan.py  prompt.py  readouts.py  response.py  statusbar.py  trace.py
utilities/: VERIFY_SPEC.md  benchmark.py  continuation_contract.py  saturn_verify.py
