# Packaging for pipx / uv / pip installs ("installed mode").
#
# The curl installers (install.sh / install.ps1) clone the repo and use requirements.txt —
# that file stays the source of truth for the clone install; keep `dependencies` below in
# sync with it. In installed mode there is no repo: config.py seeds config.yaml into
# SATURDAY_HOME (~/.saturday) from the packaged default (shipped via data-files below), and
# all user data lives there instead of site-packages, so upgrades can't clobber it.

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "saturn-agent"
version = "0.1.0"  # keep in sync with __version__ in app/__init__.py (re-exported by agent.py)
description = "Saturn — a private, local-first AI agent for the terminal. Every step it takes is visible and auditable; nothing leaves your machine without your approval."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Saturday.ai" }]
keywords = ["agent", "llm", "local-first", "ollama", "terminal", "transparency", "privacy", "auditability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # --- core agent framework ---
    "langgraph>=1.2.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "ollama>=0.6.2",
    # --- knowledge base / documents ---
    "pypdf>=6.12.2",
    "python-docx>=1.1.0",
    # --- MCP client (remote tools behind the approval gate — mcp_client.py) ---
    "mcp>=1.27.2",
    # --- web tools (keyless by default) ---
    "ddgs>=9.14.4",
    "trafilatura>=2.0.0",
    "httpx>=0.28.1",
    "tavily-python>=0.7.24",
    # --- config / utilities ---
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    # --- terminal UI ---
    "rich>=15.0.0",
    "prompt_toolkit>=3.0.52",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
# (The `cloud` extra left with the 2026-07-03 cloud-model shelve: core/llms refuses any
# non-ollama binding, so the packages could never be exercised — restore the extra alongside
# the documented reintroduction seam in core/llms.py when cloud support returns.)
# Dev-only: the unit test suite (tests/).
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/logansundaram/saturn"
Issues = "https://github.com/logansundaram/saturn/issues"

[project.scripts]
saturn = "agent:main"

[tool.setuptools]
# Root holds only entry points + foundations (see CLAUDE.md); everything else lives in the
# functional packages below. Dev-only artifacts (benchmark.py, utilities/, tests/) are not shipped.
py-modules = ["agent", "config", "diag", "env_keys", "textutil"]

[tool.setuptools.packages.find]
include = ["app*", "commands*", "core*", "trust*", "tools*", "nodes*", "stores*", "tui*"]
namespaces = true

[tool.setuptools.data-files]
# Lands at <venv>/share/saturn/ — config.py seeds SATURDAY_HOME/config.yaml from it on first run.
"share/saturn" = ["config.yaml"]
